First attempt at integration test (untested)